--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
       align-items: center;
       justify-content: center;
       transform-style: preserve-3d;
+      z-index: 100;
     }
 
     .ring.active {
-      transform: translateY(-150%) translateX(350%) scale(2);
+      transform: translateY(0%) translateX(350%) scale(1.6);
       z-index: 10;
       background-color: rgba(255, 255, 255, 0.15);
       box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -52,9 +53,25 @@
       opacity: 0.7;
     }
 
+    .ring.left h1 {
+      opacity: 0;
+    }
+
+    .ring-left>div>div>div {
+      opacity: 0 !important;
+    }
+
     .ring.right {
       transform: translateY(50%) translateX(700%) translateZ(-100px) scale(0.5);
       opacity: 0.7;
+    }
+
+    .ring.right h1 {
+      opacity: 0;
+    }
+
+    .ring-right .ring-box .ring-desc {
+      opacity: 0 !important;
     }
 
     /* Media Query for max-width: 768px */
@@ -62,7 +79,7 @@
 
 
       .ring.active {
-        transform: translateY(-100%) translateX(275%) scale(1.4);
+        transform: translateY(0%) translateX(275%) scale(1.4);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -85,7 +102,7 @@
       }
 
       .ring.active {
-        transform: translateY(-100%) translateX(210%) scale(1.4);
+        transform: translateY(0%) translateX(210%) scale(1.4);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -103,8 +120,10 @@
     }
 
     @media (max-width: 1000px) {
+
+
       .ring.active {
-        transform: translateY(-100%) translateX(170%) scale(1.4);
+        transform: translateY(10%) translateX(170%) scale(1.4);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -123,7 +142,7 @@
 
     @media (max-width: 900px) {
       .ring.active {
-        transform: translateY(-100%) translateX(150%) scale(1.4);
+        transform: translateY(40%) translateX(150%) scale(1.4);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -144,7 +163,7 @@
 
 
       .ring.active {
-        transform: translateY(-125%) translateX(100%) scale(1.25);
+        transform: translateY(20%) translateX(100%) scale(1.25);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
@@ -164,59 +183,66 @@
     /* Media Query for max-width: 576px (smaller screens) */
     @media (max-width: 677px) {
       .ring.active {
-        transform: translateY(-100%) translateX(100%) scale(1.25);
+        transform: translateY(0%) translateX(100%) scale(1.25);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
       }
 
       .ring.left {
-        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.6);
+        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.7);
         opacity: 0.7;
       }
 
       .ring.right {
-        transform: translateY(20%) translateX(210%) translateZ(-100px) scale(0.6);
+        transform: translateY(20%) translateX(210%) translateZ(-100px) scale(0.7);
         opacity: 0.7;
       }
     }
 
     @media (max-width: 576px) {
       .ring.active {
-        transform: translateY(-100%) translateX(100%) scale(1.1);
+        transform: translateY(-30%) translateX(100%) scale(1.1);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
       }
 
       .ring.left {
-        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.4);
+        transform: translateY(-30%) translateX(-25%) translateZ(-100px) scale(0.7);
         opacity: 0.7;
       }
 
       .ring.right {
-        transform: translateY(20%) translateX(210%) translateZ(-100px) scale(0.4);
+        transform: translateY(-30%) translateX(210%) translateZ(-100px) scale(0.7);
         opacity: 0.7;
       }
     }
 
     @media (max-width: 450px) {
       .ring.active {
-        transform: translateY(-100%) translateX(70%) scale(1);
+        transform: translateY(-50%) translateX(70%) scale(0.9);
         z-index: 10;
         background-color: rgba(255, 255, 255, 0.15);
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
       }
 
       .ring.left {
-        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.35);
+        transform: translateY(-50%) translateX(-25%) translateZ(-100px) scale(0.6);
         opacity: 0.7;
       }
 
       .ring.right {
-        transform: translateY(20%) translateX(150%) translateZ(-100px) scale(0.35);
+        transform: translateY(-50%) translateX(150%) translateZ(-100px) scale(0.6);
         opacity: 0.7;
       }
+    }
+
+    .ring-font {
+      font-size: 5rem;
+      opacity: 0.1;
+      min-width: 1000px;
+      text-align: center;
     }
   </style>
 </head>
@@ -394,17 +420,79 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-      <div class="container">
+      <div class="container z-3">
         <div class="rings-container" id="ringsContainer">
           <div class="ring left" data-position="left" id="ring1">
-            <div class="ring-content"><img src="/images/heroImg1.png" width="100px" class="img-fluid" alt=""></div>
+            <div class="ring-content">
+              <div class=" w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+                <div class="position-relative">
+                  <h1
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    Vintage Antique</h1>
+                  <img src="/images/heroImg1.png" width="100px" class="img-fluid" alt="">
+                </div>
+                <div class="d-flex flex-column align-items-center text-center ring-desc ">
+                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
+                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <button class="btn btn-dark rounded-5">View Details</button>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="ring active" data-position="active" id="ring2">
-            <div class="ring-content"><img src="/images/heroImg.png" width="100px" class="img-fluid" alt=""></div>
+            <div class="ring-content">
+              <div
+                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+                <div class="position-relative">
+                  <h1
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    Pavel</h1>
+                  <img src="/images/heroImg.png" width="100px" class="img-fluid" alt="">
+                </div>
+                <div class=" d-flex flex-column align-items-center text-center ring-desc">
+                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
+                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <button class="btn btn-dark rounded-5">View Details</button>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="ring right" data-position="right" id="ring3">
-            <div class="ring-content"><img src="/images/heroImg2.png" width="500px" class="img-fluid" alt=""></div>
+            <div class="ring-content">
+              <div
+                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+                <div class="position-relative">
+                  <h1
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    Hidden Halo</h1>
+                  <img src="/images/heroImg2.png" width="500px" class="img-fluid" alt="">
+                </div>
+                <div class=" d-flex flex-column align-items-center text-center ring-desc">
+                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
+                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <button class="btn btn-dark rounded-5">View Details</button>
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+      </div>
+
+      <div
+        class="container d-flex align-items-center justify-content-center flex-column text-center position-absolute bottom-0 start-50 translate-middle w-100">
+        <!-- <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+        <p>$ <span class="fs-4 fw-bold">4500</span></p>
+        <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+        <button class="btn btn-dark rounded-5">View Details</button> -->
+
+        <div class="w-100 p-2 d-flex justify-content-between align-items-center gap-3 mt-4">
+          <div class="d-flex gap-3"><i class="bi bi-facebook text-body-tertiary fs-1"></i><i
+              class="bi bi-twitter text-body-tertiary fs-1"></i><i class="bi bi-instagram text-body-tertiary fs-1"></i>
+          </div>
+          <div><i class="bi bi-share"></i> </div>
         </div>
       </div>
     </section>
