--- a/index.html
+++ b/index.html
@@ -12,239 +12,6 @@
   <link rel="stylesheet" href="styles.css">
   <title>Key Idea</title>
   <!-- https://keyidea.netlify.app/ -->
-  <style>
-    .hero-section {
-      height: 80vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
-
-    .rings-container {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      perspective: 1000px;
-    }
-
-    .ring {
-      position: absolute;
-      width: 180px;
-      height: 180px;
-      cursor: pointer;
-      transition: all 1s cubic-bezier(0.25, 0.1, 0.25, 1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transform-style: preserve-3d;
-      z-index: 100;
-    }
-
-    .ring.active {
-      transform: translateY(0%) translateX(350%) scale(1.6);
-      z-index: 10;
-      background-color: rgba(255, 255, 255, 0.15);
-      box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-    }
-
-    .ring.left {
-      transform: translateY(50%) translateX(-50%) translateZ(-100px) scale(0.5);
-      opacity: 0.7;
-    }
-
-    .ring.left h1 {
-      opacity: 0;
-    }
-
-    .ring-left>div>div>div {
-      opacity: 0 !important;
-    }
-
-    .ring.right {
-      transform: translateY(50%) translateX(700%) translateZ(-100px) scale(0.5);
-      opacity: 0.7;
-    }
-
-    .ring.right h1 {
-      opacity: 0;
-    }
-
-    .ring-right .ring-box .ring-desc {
-      opacity: 0 !important;
-    }
-
-    /* Media Query for max-width: 768px */
-    @media (max-width: 1400px) {
-
-
-      .ring.active {
-        transform: translateY(0%) translateX(275%) scale(1.4);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(65%) translateX(-50%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(75%) translateX(600%) translateZ(-225px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 1200px) {
-      .hero-section {
-        height: 50vh;
-      }
-
-      .ring.active {
-        transform: translateY(0%) translateX(210%) scale(1.4);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(20%) translateX(-50%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(40%) translateX(475%) translateZ(-225px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 1000px) {
-
-
-      .ring.active {
-        transform: translateY(10%) translateX(170%) scale(1.4);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(20%) translateX(-60%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(40%) translateX(400%) translateZ(-225px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 900px) {
-      .ring.active {
-        transform: translateY(40%) translateX(150%) scale(1.4);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(40%) translateX(350%) translateZ(-225px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 768px) {
-
-
-      .ring.active {
-        transform: translateY(20%) translateX(100%) scale(1.25);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(20%) translateX(-75%) translateZ(-100px) scale(0.65);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(20%) translateX(250%) translateZ(-100px) scale(0.65);
-        opacity: 0.7;
-      }
-    }
-
-    /* Media Query for max-width: 576px (smaller screens) */
-    @media (max-width: 677px) {
-      .ring.active {
-        transform: translateY(0%) translateX(100%) scale(1.25);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(20%) translateX(-25%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(20%) translateX(210%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 576px) {
-      .ring.active {
-        transform: translateY(-30%) translateX(100%) scale(1.1);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(-30%) translateX(-25%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(-30%) translateX(210%) translateZ(-100px) scale(0.7);
-        opacity: 0.7;
-      }
-    }
-
-    @media (max-width: 450px) {
-      .ring.active {
-        transform: translateY(-50%) translateX(70%) scale(0.9);
-        z-index: 10;
-        background-color: rgba(255, 255, 255, 0.15);
-        box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
-      }
-
-      .ring.left {
-        transform: translateY(-50%) translateX(-25%) translateZ(-100px) scale(0.6);
-        opacity: 0.7;
-      }
-
-      .ring.right {
-        transform: translateY(-50%) translateX(150%) translateZ(-100px) scale(0.6);
-        opacity: 0.7;
-      }
-    }
-
-    .ring-font {
-      font-size: 5rem;
-      opacity: 0.1;
-      min-width: 1000px;
-      text-align: center;
-    }
-  </style>
 </head>
 
 <body class="min-vh-100">
@@ -431,8 +198,8 @@
                     Vintage Antique</h1>
                   <img src="/images/heroImg1.png" width="100px" class="img-fluid" alt="">
                 </div>
-                <div class="d-flex flex-column align-items-center text-center ring-desc ">
-                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                <div class="d-flex flex-column align-items-center text-center ring-des">
+                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
                   <p>$ <span class="fs-4 fw-bold">4500</span></p>
                   <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
@@ -450,8 +217,8 @@
                     Pavel</h1>
                   <img src="/images/heroImg.png" width="100px" class="img-fluid" alt="">
                 </div>
-                <div class=" d-flex flex-column align-items-center text-center ring-desc">
-                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                <div class=" d-flex flex-column align-items-center text-center ring-des">
+                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
                   <p>$ <span class="fs-4 fw-bold">4500</span></p>
                   <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
@@ -467,10 +234,10 @@
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
                     Hidden Halo</h1>
-                  <img src="/images/heroImg2.png" width="500px" class="img-fluid" alt="">
+                  <img src="/images/heroImg2.png" width="175px" class="img-fluid" alt="">
                 </div>
-                <div class=" d-flex flex-column align-items-center text-center ring-desc">
-                  <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                <div class=" d-flex flex-column align-items-center text-center ring-des">
+                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
                   <p>$ <span class="fs-4 fw-bold">4500</span></p>
                   <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
