--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="styles.css">
   <title>Key Idea</title>
-  <!-- https://keyidea.netlify.app/ -->
+
 </head>
 
 <body class="min-vh-100">
@@ -191,7 +191,7 @@
         <div class="rings-container" id="ringsContainer">
           <div class="ring left" data-position="left" id="ring1">
             <div class="ring-content">
-              <div class=" w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+              <div class=" w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
@@ -199,9 +199,9 @@
                   <img src="/images/heroImg1.png" width="100px" class="img-fluid" alt="">
                 </div>
                 <div class="d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
-                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
               </div>
@@ -210,7 +210,7 @@
           <div class="ring active" data-position="active" id="ring2">
             <div class="ring-content">
               <div
-                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
@@ -218,9 +218,9 @@
                   <img src="/images/heroImg.png" width="100px" class="img-fluid" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
-                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
               </div>
@@ -229,7 +229,7 @@
           <div class="ring right" data-position="right" id="ring3">
             <div class="ring-content">
               <div
-                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box">
+                class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
@@ -237,9 +237,9 @@
                   <img src="/images/heroImg2.png" width="175px" class="img-fluid" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-3 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-4 fw-bold">4500</span></p>
-                  <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
+                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
               </div>
