--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
               <div class=" w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
-                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Vintage Antique</h1>
-                  <img src="/images/heroImg1.png" width="100px" class="img-fluid" alt="">
+                  <img src="/images/heroImg1.png" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class="d-flex flex-column align-items-center text-center ring-des">
                   <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -213,9 +213,9 @@
                 class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
-                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Pavel</h1>
-                  <img src="/images/heroImg.png" width="100px" class="img-fluid" alt="">
+                  <img src="/images/heroImg.png" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
                   <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -232,9 +232,9 @@
                 class="position-relative w-100 d-flex flex-column align-items-center justify-content-center ring-box gap-3">
                 <div class="position-relative">
                   <h1
-                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font">
+                    class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Hidden Halo</h1>
-                  <img src="/images/heroImg2.png" width="175px" class="img-fluid" alt="">
+                  <img src="/images/heroImg2.png" width="175px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
                   <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -248,20 +248,15 @@
         </div>
       </div>
 
-      <div
-        class="container d-flex align-items-center justify-content-center flex-column text-center position-absolute bottom-0 start-50 translate-middle w-100">
-        <!-- <h1 class="fs-1 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-        <p>$ <span class="fs-4 fw-bold">4500</span></p>
-        <p class="fs-5 text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
-        <button class="btn btn-dark rounded-5">View Details</button> -->
-
+      <!-- <div
+        class="container d-flex align-items-center justify-content-center flex-column text-center position-absolute bottom-0 start-50 translate-middle-x">
         <div class="w-100 p-2 d-flex justify-content-between align-items-center gap-3 mt-4">
           <div class="d-flex gap-3"><i class="bi bi-facebook text-body-tertiary fs-1"></i><i
               class="bi bi-twitter text-body-tertiary fs-1"></i><i class="bi bi-instagram text-body-tertiary fs-1"></i>
           </div>
           <div><i class="bi bi-share"></i> </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
 
