--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- Header -->
   <!-- Desktop Header -->
   <header class="container-fluid py-4 bg-light d-none d-lg-block header position-fixed" style="z-index: 1000;">
-    <nav class="container d-flex justify-content-between align-items-center">
+    <nav class="container d-flex justify-content-between align-items-center position-relative">
       <a href="index.html" class="navbar-brand fs-3 ">dimend<span class="fw-bold">SCAASI</span></a>
       <ul class="nav gap-3">
         <li class="nav-item">
@@ -46,6 +46,11 @@
         <a href="#">
           <img src="/images/user.png" class="img-fluid" width="25px" alt="">
         </a>
+      </div>
+
+      <div class="contianer d-flex align-items-center justify-content-between">
+        <div class="d-flex align-items-center gap-3"><img src="" alt=""></div>
+        <div class="d-flex align-items-center gap-3"></div>
       </div>
 
     </nav>
@@ -186,7 +191,9 @@
 
 
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section position-relative">
+
+
       <div class="container z-3">
         <div class="rings-container" id="ringsContainer">
           <div class="ring left" data-position="left" id="ring1">
@@ -199,8 +206,8 @@
                   <img src="/images/heroImg1.png" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class="d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <h1 class=" fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class=" fw-bold">4500</span></p>
                   <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
@@ -218,8 +225,8 @@
                   <img src="/images/heroImg.png" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <h1 class=" fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class=" fw-bold">4500</span></p>
                   <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
@@ -237,8 +244,8 @@
                   <img src="/images/heroImg2.png" width="175px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
-                  <h1 class="fs-5 fw-bold opacity-75 z-3">Vintage & Antique</h1>
-                  <p>$ <span class="fs-6 fw-bold">4500</span></p>
+                  <h1 class="fw-bold opacity-75 z-3">Vintage & Antique</h1>
+                  <p>$ <span class="fw-bold">4500</span></p>
                   <p class="ring-off text-body-tertiary">Take 20% off for a limited time. <br>use code: LOVE20</p>
                   <button class="btn btn-dark rounded-5">View Details</button>
                 </div>
@@ -248,15 +255,15 @@
         </div>
       </div>
 
-      <!-- <div
-        class="container d-flex align-items-center justify-content-center flex-column text-center position-absolute bottom-0 start-50 translate-middle-x">
+      <div class="container position-absolute bottom-0 text-center ">
         <div class="w-100 p-2 d-flex justify-content-between align-items-center gap-3 mt-4">
-          <div class="d-flex gap-3"><i class="bi bi-facebook text-body-tertiary fs-1"></i><i
-              class="bi bi-twitter text-body-tertiary fs-1"></i><i class="bi bi-instagram text-body-tertiary fs-1"></i>
+          <div class="d-flex gap-3"><i class="bi bi-facebook text-body-tertiary fs-2"></i><i
+              class="bi bi-twitter text-body-tertiary fs-2"></i><i class="bi bi-instagram text-body-tertiary fs-2"></i>
           </div>
-          <div><i class="bi bi-share"></i> </div>
+          <div class="bg-body-tertiary rounded-circle"><i class="bi bi-arrow-down-circle  text-body-tertiary fs-2"></i>
+          </div>
         </div>
-      </div> -->
+      </div>
     </section>
 
 
