--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <div class="d-flex gap-4">
         <a href="#">
 
-          <img src="/images/search.png" class="img-fluid" width="25px" alt="">
+          <img src="/images/search.webp" class="img-fluid" width="25px" alt="">
         </a>
         <a href="#">
-          <img src="/images/wishlist.png" class="img-fluid" width="25px" alt="">
+          <img src="/images/wishlist.webp" class="img-fluid" width="25px" alt="">
         </a>
         <a href="#">
-          <img src="/images/user.png" class="img-fluid" width="25px" alt="">
+          <img src="/images/user.webp" class="img-fluid" width="25px" alt="">
         </a>
       </div>
 
@@ -82,10 +82,10 @@
       <div class="d-flex gap-4">
         <a href="#">
 
-          <img src="/images/search.png" class="img-fluid" width="20px" alt="">
+          <img src="/images/search.webp" class="img-fluid" width="20px" alt="">
         </a>
         <a href="#">
-          <img src="/images/user.png" class="img-fluid" width="20px" alt="">
+          <img src="/images/user.webp" class="img-fluid" width="20px" alt="">
         </a>
       </div>
 
@@ -166,11 +166,11 @@
       <hr class="container my-5">
       <div class="d-flex flex-column gap-4 px-3">
         <div class="d-flex gap-3">
-          <img src="/images/chatIcon.png" alt="user" class="img-fluid" width="25px">
+          <img src="/images/chatIcon.webp" alt="user" class="img-fluid" width="25px">
           <a href="#" class="text-reset text-decoration-none fs-4 text-secondary">Inquiry</a>
         </div>
         <div class="d-flex gap-3">
-          <img src="/images/user2.png" alt="user" class="img-fluid" width="25px">
+          <img src="/images/user2.webp" alt="user" class="img-fluid" width="25px">
           <a href="#" class="text-reset text-decoration-none fs-4 text-secondary">Inquiry</a>
         </div>
       </div>
@@ -180,13 +180,7 @@
   <!-- /Mobile Header -->
   <!-- /Header -->
 
-
-
-
-
-
-
-
+  <!-- Main Container -->
   <div class="" style="padding-top: 100px;">
 
 
@@ -203,7 +197,7 @@
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Vintage Antique</h1>
-                  <img src="/images/heroImg1.png" width="100px" class="img-fluid z-3" alt="">
+                  <img src="/images/heroImg1.webp" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class="d-flex flex-column align-items-center text-center ring-des">
                   <h1 class=" fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -222,7 +216,7 @@
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Pavel</h1>
-                  <img src="/images/heroImg.png" width="100px" class="img-fluid z-3" alt="">
+                  <img src="/images/heroImg.webp" width="100px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
                   <h1 class=" fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -241,7 +235,7 @@
                   <h1
                     class="position-absolute z-0 top-50 start-50 translate-middle fw-bold text-body-tertiary ring-font z-0">
                     Hidden Halo</h1>
-                  <img src="/images/heroImg2.png" width="175px" class="img-fluid z-3" alt="">
+                  <img src="/images/heroImg2.webp" width="175px" class="img-fluid z-3" alt="">
                 </div>
                 <div class=" d-flex flex-column align-items-center text-center ring-des">
                   <h1 class="fw-bold opacity-75 z-3">Vintage & Antique</h1>
@@ -264,21 +258,8 @@
           </div>
         </div>
       </div>
+
     </section>
-
-
-
-
-
-    <!-- <div class="swiper swiper1 m-auto">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="/images/diamond1.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide"><img src="/images/diamond2.png" class="img-fluid" alt=""></div>
-          <div class="swiper-slide"><img src="/images/diamond3.png" class="img-fluid" alt=""></div>
-        </div>
-      </div> -->
-    </section>
-
     <!-- /Hero Section -->
 
 
@@ -296,7 +277,7 @@
         <div class="scroll-container">
           <!-- Collection Items -->
           <div class="card border-0 text-center">
-            <img src="/images/collection1.png" class="img-fluid" alt="collection1">
+            <img src="/images/collection1.webp" class="img-fluid" alt="collection1">
             <div class="p-3">
               <h5 class="fs-5 fw-semibold">Wedding Rings</h5>
               <p class="text-body-tertiary">Every diamond in our collection</p>
@@ -304,7 +285,7 @@
           </div>
 
           <div class="card border-0 text-center">
-            <img src="/images/collection2.png" class="img-fluid" alt="collection1">
+            <img src="/images/collection2.webp" class="img-fluid" alt="collection1">
             <div class="p-3">
               <h5 class="fs-5 fw-semibold">Engagement Rings</h5>
               <p class="text-body-tertiary">Every diamond in our collection</p>
@@ -312,7 +293,7 @@
           </div>
 
           <div class="card border-0 text-center">
-            <img src="/images/collection3.png" class="img-fluid" alt="collection1">
+            <img src="/images/collection3.webp" class="img-fluid" alt="collection1">
             <div class="p-3">
               <h5 class="fs-5 fw-semibold">Fine Jewelry</h5>
               <p class="text-body-tertiary">Every diamond in our collection</p>
@@ -320,7 +301,7 @@
           </div>
 
           <div class="card border-0 text-center">
-            <img src="/images/collection4.png" class="img-fluid" alt="collection1">
+            <img src="/images/collection4.webp" class="img-fluid" alt="collection1">
             <div class="p-3">
               <h5 class="fs-5 fw-semibold">Latest Rings</h5>
               <p class="text-body-tertiary">Every diamond in our collection</p>
@@ -348,7 +329,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border overflow-hidden diamond-card">
-                <img src="/images/diamond1.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond1.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Oval</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -360,7 +341,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border overflow-hidden diamond-card">
-                <img src="/images/diamond2.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond2.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100  p-1">
                   <h4 class="mt-2">Heart</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -372,7 +353,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border  overflow-hidden diamond-card">
-                <img src="/images/diamond3.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond3.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Asscher</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -384,7 +365,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border  overflow-hidden diamond-card">
-                <img src="/images/diamond2.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond2.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Heart</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -396,7 +377,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border  overflow-hidden diamond-card">
-                <img src="/images/diamond1.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond1.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Round</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -408,7 +389,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border  overflow-hidden diamond-card">
-                <img src="/images/diamond5.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond5.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Asscher</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -420,7 +401,7 @@
             <div class="">
               <div
                 class="d-flex flex-column align-items-center justify-content-center bg-light border  overflow-hidden diamond-card">
-                <img src="/images/diamond2.png" class="img-fluid" alt="diamond">
+                <img src="/images/diamond2.webp" class="img-fluid" alt="diamond">
                 <div class="text-center border-top w-100 p-1">
                   <h4 class="mt-2">Round</h4>
                   <p class="text-danger opacity-50 card-desc">Every diamond in our collection</p>
@@ -448,16 +429,16 @@
           natural diamonds.</p>
         <div class="row g-2 my-3 my-md-0 d-md-none">
           <div class="col-6">
-            <div class="grid-box"><img src="/images/Clip1.png" class="img-fluid" alt=""></div>
+            <div class="grid-box"><img src="/images/Clip1.webp" class="img-fluid" alt=""></div>
           </div>
           <div class="col-6">
-            <div class="grid-box"><img src="/images/Clip2.png" class="img-fluid" alt=""></div>
+            <div class="grid-box"><img src="/images/Clip2.webp" class="img-fluid" alt=""></div>
           </div>
           <div class="col-6">
-            <div class="grid-box"><img src="/images/Clip3.png" class="img-fluid" alt=""></div>
+            <div class="grid-box"><img src="/images/Clip3.webp" class="img-fluid" alt=""></div>
           </div>
           <div class="col-6">
-            <div class="grid-box"><img src="/images/Clip4.png" class="img-fluid" alt=""></div>
+            <div class="grid-box"><img src="/images/Clip4.webp" class="img-fluid" alt=""></div>
           </div>
         </div>
         <form action="" class="mt-sm-5 text-center text-md-start">
@@ -473,16 +454,16 @@
 
       <div class="row g-2 my-3 my-md-0 d-none d-md-flex col-6 col-lg-4">
         <div class="col-6">
-          <div class="grid-box"><img src="/images/Clip1.png" class="img-fluid" alt=""></div>
+          <div class="grid-box"><img src="/images/Clip1.webp" class="img-fluid" alt=""></div>
         </div>
         <div class="col-6">
-          <div class="grid-box"><img src="/images/Clip2.png" class="img-fluid" alt=""></div>
+          <div class="grid-box"><img src="/images/Clip2.webp" class="img-fluid" alt=""></div>
         </div>
         <div class="col-6">
-          <div class="grid-box"><img src="/images/Clip3.png" class="img-fluid" alt=""></div>
+          <div class="grid-box"><img src="/images/Clip3.webp" class="img-fluid" alt=""></div>
         </div>
         <div class="col-6">
-          <div class="grid-box"><img src="/images/Clip4.png" class="img-fluid" alt=""></div>
+          <div class="grid-box"><img src="/images/Clip4.webp" class="img-fluid" alt=""></div>
         </div>
       </div>
 
@@ -490,7 +471,7 @@
     <!-- /Keep In Touch -->
 
   </div>
-
+  <!-- /Main Container -->
 
   <footer class="container-fluid bg-light py-3 pb-0">
     <div class="container my-3 d-flex flex-column align-items-center">
@@ -515,28 +496,28 @@
       <div>
         <ul class="list-unstyled d-flex align-items-center justify-content-center flex-wrap gap-3 gap-md-5 my-3">
           <li class="">
-            <img src="/images/brand1.png" class="img-fluid" width="100px" alt="">
+            <img src="/images/brand1.webp" class="img-fluid" width="100px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand2.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand2.webp" class="img-fluid" width="75px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand3.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand3.webp" class="img-fluid" width="75px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand4.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand4.webp" class="img-fluid" width="75px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand5.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand5.webp" class="img-fluid" width="75px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand6.png" class="img-fluid" width="50px" alt="">
+            <img src="/images/brand6.webp" class="img-fluid" width="50px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand7.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand7.webp" class="img-fluid" width="75px" alt="">
           </li>
           <li class="">
-            <img src="/images/brand8.png" class="img-fluid" width="75px" alt="">
+            <img src="/images/brand8.webp" class="img-fluid" width="75px" alt="">
           </li>
         </ul>
       </div>
@@ -559,92 +540,6 @@
 
 
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const rings = document.querySelectorAll('.ring');
-
-      // Add click event listeners to each ring
-      rings.forEach(ring => {
-        ring.addEventListener('click', function () {
-          // Skip if already active
-          if (this.classList.contains('active')) return;
-
-          const currentPosition = this.getAttribute('data-position');
-          const activeRing = document.querySelector('.ring.active');
-          const activePosition = activeRing.getAttribute('data-position');
-
-          // Determine rotation direction
-          const clockwise = (currentPosition === 'left' && activePosition === 'active') ||
-            (currentPosition === 'active' && activePosition === 'right') ||
-            (currentPosition === 'right' && activePosition === 'left');
-
-          // Update positions based on clicked ring
-          if (currentPosition === 'left') {
-            // Left ring was clicked - rotate clockwise
-            updatePositions(clockwise);
-          } else if (currentPosition === 'right') {
-            // Right ring was clicked - rotate counter-clockwise
-            updatePositions(clockwise);
-          }
-        });
-      });
-
-      // Function to update positions of all rings
-      function updatePositions(clockwise) {
-        const positions = ['left', 'active', 'right'];
-
-        // Get current position of each ring
-        const currentPositions = {};
-        rings.forEach(ring => {
-          currentPositions[ring.id] = ring.getAttribute('data-position');
-        });
-
-        // Calculate new positions
-        const newPositions = {};
-        for (const [ringId, position] of Object.entries(currentPositions)) {
-          const currentIndex = positions.indexOf(position);
-          let newIndex;
-
-          if (clockwise) {
-            // Rotate clockwise
-            newIndex = (currentIndex + 1) % positions.length;
-          } else {
-            // Rotate counter-clockwise
-            newIndex = (currentIndex - 1 + positions.length) % positions.length;
-          }
-
-          newPositions[ringId] = positions[newIndex];
-        }
-
-        // Apply new positions
-        for (const [ringId, newPosition] of Object.entries(newPositions)) {
-          const ring = document.getElementById(ringId);
-
-          // Remove all position classes
-          ring.classList.remove('left', 'active', 'right');
-
-          // Add new position class
-          ring.classList.add(newPosition);
-
-          // Update data attribute
-          ring.setAttribute('data-position', newPosition);
-        }
-      }
-
-      // Add automatic rotation for demo purposes (optional)
-      let autoRotate = setInterval(() => {
-        updatePositions(true);
-      }, 5000);
-
-      // Stop auto-rotation when user interacts
-      rings.forEach(ring => {
-        ring.addEventListener('click', () => {
-          clearInterval(autoRotate);
-        });
-      });
-    });
-  </script>
-
 
 
 
@@ -653,7 +548,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
 
   <script src="script.js"></script>
 </body>
